--- a/apps/worker/templates/contas/vendasDoFunc.html
+++ b/apps/worker/templates/contas/vendasDoFunc.html
@@ -29,6 +29,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="{% url 'listFuncionario' %}">Voltar para lista de funcionários</a>
+    <a href="{% url 'ListFuncionario' %}">Voltar para lista de funcionários</a>
 </body>
 </html>
