update, formatações e comissão

--- a/apps/worker/templates/buscasFuncionario/dadosFuncionario.html
+++ b/apps/worker/templates/buscasFuncionario/dadosFuncionario.html
@@ -65,7 +65,7 @@
         <p><strong>Cargo: </strong> {{ cadastro.especializacao_funcao }}</p>
 
       
-         <p><strong>Departamento: </strong> {{ cadastro.departamento }}</p>
+         <p><strong>Departamento: </strong> {{  cadastro.get_departamento_display }}</p>
          <p><strong>Situação na empresa: </strong> {{ cadastro.atividade }}</p>
         </div>
 
