--- a/apps/worker/templates/contas/detalhesFluxo.html
+++ b/apps/worker/templates/contas/detalhesFluxo.html
@@ -20,10 +20,10 @@
   <div class="container mt-5">
     <h2>Detalhes do Fluxo Mensal - {{ fluxo.mes_referencia|date:"F Y" }}</h2>
     <div class="card mt-4">
-        <div class="card-body">
-            <h5 class="card-title">Saldo Final: R$ {{ fluxo.saldo_total }}</h5><br>
-            <p class="card-text">Total de Entradas: R$ {{ fluxo.total_entrada }}</p>
-            <p class="card-text">Total de Saídas: R$ {{ fluxo.total_saida }}</p>
+        <div class="card-body"> 
+            <h5 class="card-title">Saldo Final: R$ {{ fluxo.saldo_total|floatformat:2 }}</h5><br>
+            <p class="card-text">Total de Entradas: R$ {{ fluxo.total_entrada|floatformat:2 }}</p>
+            <p class="card-text">Total de Saídas: R$ {{ fluxo.total_saida|floatformat:2 }}</p>
         </div>
     </div>
 
