--- a/apps/worker/templates/contas/listagemFluxo.html
+++ b/apps/worker/templates/contas/listagemFluxo.html
@@ -37,8 +37,7 @@
                     <td>R$ {{ fluxo.total_entrada|floatformat:2 }}</td>
                     <td>R$ {{ fluxo.total_saida|floatformat:2 }}</td>
                     <td>
-                        <a href="{% url 'detalhesFluxo' fluxo.pk %}" class="btn btn-primary">Detalhes</a>
-                        <a href="{% url 'vendasDoFunc' fluxo.pk %}" class="btn btn-primary">func</a>
+                        <a href="{% url 'fluxo_completo' fluxo.pk %}" class="btn btn-primary">Detalhes</a>
                         <a href="{% url 'exportarFluxoConcluido' fluxo.pk %}" class="btn btn-success btn-sm">Exportar</a>
                     </td>
                 </tr>
