correções apontadas pelo QA

--- a/apps/service/templates/service/Venda_list.html
+++ b/apps/service/templates/service/Venda_list.html
@@ -15,6 +15,10 @@
             position: relative;
             top: 15px; /* Ajuste este valor conforme necessário */
         }
+        #toggleStatusBtn {
+            z-index: 9999;
+            position: relative;
+          }
 
     </style>
 </head>
