--- a/apps/client/templates/buscasCliente/dadosCliente.html
+++ b/apps/client/templates/buscasCliente/dadosCliente.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="{% static 'global/css/buscasFuncionario/dados_print.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
 <style>
@@ -118,15 +120,19 @@
        {% if cadastro.anexos.all %}
           
                {% for anexo in cadastro.anexos.all %}
-                  
+
                        <a href="{{ anexo.arquivo.url }}" target="_blank">{{ anexo.arquivo.name }}</a>
 
                        <form action="{% url 'excluir_anexo_cliente' anexo.id %}" method="POST" style="display:inline;">
                         {% csrf_token %}
-                        <button type="submit" onclick="return confirm('Tem certeza que deseja excluir este anexo?');">Excluir</button>
-                    </form>
+                        <button type="submit" class="btn btn-danger btn-sm" 
+                        style="padding: 2px 8px; font-size: 0.60rem;" 
+                        onclick="return confirm('Tem certeza que deseja excluir este anexo?');">
+                  Excluir
+                </button> 
+               </form>
                     
-                  <br>
+                  <br><br>
                {% endfor %}
           
        {% else %}
