--- a/apps/service/templates/buncasVendas/dadosVenda.html
+++ b/apps/service/templates/buncasVendas/dadosVenda.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="{% static 'global/css/buscasFuncionario/dados_print.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
 
@@ -92,10 +94,14 @@
 
                         <form action="{% url 'excluir_anexo' anexo.id %}" method="POST" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" onclick="return confirm('Tem certeza que deseja excluir este anexo?');">Excluir</button>
-                        </form>
+                            <button type="submit" class="btn btn-danger btn-sm" 
+                            style="padding: 2px 8px; font-size: 0.60rem;" 
+                            onclick="return confirm('Tem certeza que deseja excluir este anexo?');">
+                      Excluir
+                    </button> 
+                    </form>
                         
-                   <br>
+                   <br> <br>
                 {% endfor %}
            
         {% else %}
