--- a/apps/worker/templates/contas/detalhes_fluxo_completo.html
+++ b/apps/worker/templates/contas/detalhes_fluxo_completo.html
@@ -108,6 +108,17 @@
                                             {% csrf_token %}
                                             <button type="submit" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
                                         </form>
+                                        
+                                        <a href="{% url 'fluxo_atualizar' pk=conta.pk %}"
+                                        class="btn btn-secondary btn-sm"
+                                        style="padding-right: 10px; transform: translate(33px, -30px);">
+                                       <img src="{% static 'imagens/edit.svg' %}"
+                                            alt="Editar"
+                                            style="height: 15px; width: 15px;">
+                                     </a>
+                                        
+                                        
+                                       
                                     </td>
                                 </tr>
                                 {% endfor %}
